# jj-aidesc

./: CHANGELOG.md  README.md  mise.toml  pyproject.toml  release-please-config.json  taskfile.yaml
.github/workflows/: ci.yaml  release-please.yaml
docs/: details.md
src/jj_aidesc/: __init__.py  ai.py  cli.py  config.py  editor.py  error.py  jj.py  prompts.py  provider.py  spinner.py
