[project]
name = "jj-aidesc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "suda-3156", email = "116961611+suda-3156@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
jj-aidesc = "jj_aidesc:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "pyright>=1.1.407",
    "ruff>=0.14.7",
]
