[project]
name = "jj-aidesc"
version = "0.1.0"
description = "AI-powered commit description generator for jj (Jujutsu)"
readme = "README.md"
authors = [
    { name = "suda-3156", email = "116961611+suda-3156@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.0",
    "langchain-core>=0.3",
    "langchain-google-genai>=2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "halo>=0.0.31",
    "readchar>=4.2.1",
]

[project.scripts]
jj-aidesc = "jj_aidesc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "pyright>=1.1.407",
    "ruff>=0.14.7",
]
